--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation "com.yuyakaido.android:card-stack-view:2.3.4"
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
+    implementation 'com.github.bumptech.glide:glide:3.5.1'
 }
