--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SignUpDialog"></activity>
+        <activity android:name=".SplashScreenActivity"></activity>
+        <activity android:name=".SignUpDialog" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +26,7 @@
         <activity android:name=".CreateCardDialog" />
         <activity android:name=".MyDeckActivity" />
         <activity android:name=".LeaderboardDialog" />
-        <activity android:name=".StartActivity"></activity>
+        <activity android:name=".StartActivity" />
         <activity android:name=".MainActivity" />
     </application>
 
