--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         </activity>
         <activity android:name=".CustomDeckActivity" />
         <activity android:name=".CreateCardDialog" />
-        <activity android:name=".MyDeckActivity" />
+        <activity android:name=".DeckListActivity" />
         <activity android:name=".LeaderboardDialog" />
         <activity android:name=".StartActivity" />
         <activity android:name=".MainActivity" />
