--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
     implementation 'com.github.bumptech.glide:glide:3.5.1'
     implementation 'de.hdodenhof:circleimageview:3.0.1'
+    implementation 'br.com.simplepass:loading-button-android:2.2.0'
 }
